@@ -137,7 +137,10 @@ EXTRA_DIST =				\
 
 install-exec-hook:
 # Install setuid root.
-	chmod 4755 $(DESTDIR)$(bindir)/schroot
+	if [ -f "$(DESTDIR)$(bindir)/dchroot" ]; then \
+	  chmod 4755 "$(DESTDIR)$(bindir)/dchroot"; \
+	fi
+	chmod 4755 "$(DESTDIR)$(bindir)/schroot"
 
 install-data-hook:
 	$(MKINSTALLDIRS) $(DESTDIR)$(SCHROOT_LOCK_DIR)
